# python-package-template

./: pyproject.toml
src/python_package/: __init__.py
